# mirage-sql

./: README.md  core.py  pyproject.toml  table.py
examples/: medium_demo.py  simple_demo.py  simple_join.py
src/mirage_sql/: __init__.py  collections.py  core.py  proxy.py
tests/: test_joins.py  test_manager_multi.py  test_mirage.py
